@@ -27,7 +27,7 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.BF_ACTION_ACAS;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.BF_ACTION_CASE_LISTED;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.BF_ACTION_CASE_PAPERS;
@@ -130,7 +130,7 @@ public final class Helper {
                     .stream()
                     .filter(respondentSumTypeItem -> respondentSumTypeItem.getValue().getResponseStruckOut() == null
                             || respondentSumTypeItem.getValue().getResponseStruckOut().equals(NO))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (caseData.getRespondentCollection().size() == 1
                     && YES.equals(caseData.getRespondentCollection().get(0).getValue().getResponseStruckOut())
@@ -152,7 +152,7 @@ public final class Helper {
                     .stream()
                     .filter(respondentSumTypeItem -> respondentSumTypeItem.getValue().getResponseStruckOut() == null
                             || respondentSumTypeItem.getValue().getResponseStruckOut().equals(NO))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return activeRespondents;
@@ -230,19 +230,22 @@ public final class Helper {
         if (caseData.getHearingCollection() != null) {
             for (HearingTypeItem hearingTypeItem : caseData.getHearingCollection()) {
 
-                if (hearingTypeItem.getValue().getHearingDateCollection() != null) {
+                if (hearingTypeItem.getValue() != null
+                    && hearingTypeItem.getValue().getHearingDateCollection() != null) {
                     for (DateListedTypeItem dateListedTypeItem
                             : hearingTypeItem.getValue().getHearingDateCollection()) {
 
                         DateListedType dateListedType = dateListedTypeItem.getValue();
-                        if (isHearingStatusPostponed(dateListedType) && dateListedType.getPostponedDate() == null) {
-                            dateListedType.setPostponedDate(UtilHelper.formatCurrentDate2(LocalDate.now()));
-                        }
-                        if (dateListedType.getPostponedDate() != null
-                                &&
-                                (!isHearingStatusPostponed(dateListedType)
-                                        || dateListedType.getHearingStatus() == null)) {
-                            dateListedType.setPostponedDate(null);
+                        if (dateListedType != null) {
+                            if (isHearingStatusPostponed(dateListedType)
+                                && dateListedType.getPostponedDate() == null) {
+                                dateListedType.setPostponedDate(UtilHelper.formatCurrentDate2(LocalDate.now()));
+                            }
+                            if (dateListedType.getPostponedDate() != null
+                                && (!isHearingStatusPostponed(dateListedType)
+                                    || dateListedType.getHearingStatus() == null)) {
+                                dateListedType.setPostponedDate(null);
+                            }
                         }
                     }
                 }
@@ -253,7 +256,7 @@ public final class Helper {
 
     private static boolean isHearingStatusPostponed(DateListedType dateListedType) {
         return dateListedType.getHearingStatus() != null
-                && dateListedType.getHearingStatus().equals(HEARING_STATUS_POSTPONED);
+                && HEARING_STATUS_POSTPONED.equals(dateListedType.getHearingStatus());
     }
 
     public static List<String> getJurCodesCollection(List<JurCodesTypeItem> jurCodesCollection) {
@@ -261,7 +264,7 @@ public final class Helper {
         return jurCodesCollection != null
                 ? jurCodesCollection.stream()
                 .map(jurCodesTypeItem -> jurCodesTypeItem.getValue().getJuridictionCodesList())
-                .collect(Collectors.toList())
+                .toList()
                 : new ArrayList<>();
     }
 
